[tool.poetry]
name = "advent-2015"
version = "0.1.0"
description = ""
authors = ["Riccardo Tesselli <riccardo.tesselli@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_2015"}]

[tool.poetry.dependencies]
python = "^3.11"
more-itertools = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
