[project]
name = "advent-2015"
version = "0.1.0"
description = ""
authors = [{ name = "Riccardo Tesselli", email = "riccardo.tesselli@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "more-itertools>=10.3.0,<11",
    "numpy>=2.0.1,<3",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["advent_2015"]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
